# pagepouch-rust

./: Cargo.toml  Rocket.toml
api/: Cargo.toml
api/src/: lib.rs  pool.rs
entity/: Cargo.toml
entity/src/: api_key.rs  lib.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20231125_000001_create_user_table.rs  m20231125_000002_create_apikey_table.rs
service/: Cargo.toml
service/src/: lib.rs
src/: main.rs
