[package]
name = "migration"
version = "0.1.0"
edition = "2021"
authors = ["Anson VanDoren <anson@ansonvandoren.com>"]
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0" }
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.6"
features = [
  "sqlx-sqlite",
  "runtime-tokio-native-tls",
]
