[package]
name = "pagepouch-service"
version = "0.1.0"
edition = "2021"
authors = ["Anson VanDoren <anson@ansonvandoren.com>"]
publish = false

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.12.6" # sea-orm version
features = [
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]

[dev-dependencies]
tokio = "1.20.0"

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
